--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
 <body>
   <section class="hero">
     <div class="intro-slideshow">
-      <img src="Carousel/Beaches-Turks-and-Caicos_Carousel_ResortHero_Slider_1.jpg">
-      <img src="Carousel/Sandals-Barbados_Carousel_ResortHero_Slider_1.jpg">
-      <img src="Carousel/Sandals-Dunns-River_Carousel_ResortHero_Slider_1.jpg">
-      <img src="Carousel/Sandals-Emerald-Bay_Carousel_ResortHero_Slider_1.jpg">
-      <img src="Carousel/Sandals-Montego-Bay_Carousel_ResortHero_Slider_1.jpg">
-      <img src="Carousel/Sandals-Saint-Vincent_Carousel_ResortHero_Slider_1.jpg">
+      <img loading="lazy" src="Carousel/Beaches-Turks-and-Caicos_Carousel_ResortHero_Slider_1.jpg">
+      <img loading="lazy" src="Carousel/Sandals-Barbados_Carousel_ResortHero_Slider_1.jpg">
+      <img loading="lazy" src="Carousel/Sandals-Dunns-River_Carousel_ResortHero_Slider_1.jpg">
+      <img loading="lazy" src="Carousel/Sandals-Emerald-Bay_Carousel_ResortHero_Slider_1.jpg">
+      <img loading="lazy" src="Carousel/Sandals-Montego-Bay_Carousel_ResortHero_Slider_1.jpg">
+      <img loading="lazy" src="Carousel/Sandals-Saint-Vincent_Carousel_ResortHero_Slider_1.jpg">
     </div>
     <div class="header">
       <div class="header-third"></div>
-      <div class="header-third"><img src="images/sandals-logo.png" loading="lazy" alt=""></div>
+      <div class="header-third"><img loading="lazy" src="images/sandals-logo.png" loading="lazy" alt=""></div>
       <div class="header-third align-right">
         <div class="button">
           <a href="http://ltobe.sandals.com/" class="button-wrapper">Book Now</a>
@@ -52,7 +52,7 @@
     <div class="Sandals-Saint-Montego flex resort-wrapper">
       <div class="left-resort-details">
         <div class="resort-image">
-          <img src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Carousel_ResortHero_Slider/{{#dashes}}{{ResortTitle}}{{/dashes}}_Carousel_ResortHero_Slider_1.jpg">
+          <img loading="lazy" src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Carousel_ResortHero_Slider/{{#dashes}}{{ResortTitle}}{{/dashes}}_Carousel_ResortHero_Slider_1.jpg">
         </div>
         <div class="resort-description">
           <h2>{{ResortTitle}}</h2>
@@ -95,42 +95,42 @@
           <div data-id="island" class="tab">Island Tours</div> -->
         </div>
         <div class="resort-images suggested active">
-          <div class="resort-image"><img src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Carousel_ResortHero_Slider/{{#dashes}}{{ResortTitle}}{{/dashes}}_Carousel_ResortHero_Slider_1.jpg"></div>
-          <div class="resort-image"><img src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Beaches/{{#dashes}}{{ResortTitle}}{{/dashes}}_Beaches_1.jpg"></div>
-          <div class="resort-image"><img src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Pools/{{#dashes}}{{ResortTitle}}{{/dashes}}_Pools_1.jpg"></div>
-          <div class="resort-image"><img src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Dining-Bars/{{#dashes}}{{ResortTitle}}{{/dashes}}_Dining-Bars_1.jpg"></div>
-          <!-- <div class="resort-image"><img src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Watersports/{{#dashes}}{{ResortTitle}}{{/dashes}}_Watersports_1.jpg"></div>
-          <div class="resort-image"><img src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Tours/{{#dashes}}{{ResortTitle}}{{/dashes}}_Tours_1.jpg"></div> -->
+          <div class="resort-image"><img loading="lazy" src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Carousel_ResortHero_Slider/{{#dashes}}{{ResortTitle}}{{/dashes}}_Carousel_ResortHero_Slider_1.jpg"></div>
+          <div class="resort-image"><img loading="lazy" src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Beaches/{{#dashes}}{{ResortTitle}}{{/dashes}}_Beaches_1.jpg"></div>
+          <div class="resort-image"><img loading="lazy" src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Pools/{{#dashes}}{{ResortTitle}}{{/dashes}}_Pools_1.jpg"></div>
+          <div class="resort-image"><img loading="lazy" src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Dining-Bars/{{#dashes}}{{ResortTitle}}{{/dashes}}_Dining-Bars_1.jpg"></div>
+          <!-- <div class="resort-image"><img loading="lazy" src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Watersports/{{#dashes}}{{ResortTitle}}{{/dashes}}_Watersports_1.jpg"></div>
+          <div class="resort-image"><img loading="lazy" src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Tours/{{#dashes}}{{ResortTitle}}{{/dashes}}_Tours_1.jpg"></div> -->
         </div>
         <div class="resort-images beaches">
-          <div class="resort-image"><img src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Beaches/{{#dashes}}{{ResortTitle}}{{/dashes}}_Beaches_1.jpg"></div>
-          <div class="resort-image"><img src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Beaches/{{#dashes}}{{ResortTitle}}{{/dashes}}_Beaches_2.jpg"></div>
-          <div class="resort-image"><img src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Beaches/{{#dashes}}{{ResortTitle}}{{/dashes}}_Beaches_3.jpg"></div>
-          <div class="resort-image"><img src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Beaches/{{#dashes}}{{ResortTitle}}{{/dashes}}_Beaches_4.jpg"></div>
+          <div class="resort-image"><img loading="lazy" src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Beaches/{{#dashes}}{{ResortTitle}}{{/dashes}}_Beaches_1.jpg"></div>
+          <div class="resort-image"><img loading="lazy" src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Beaches/{{#dashes}}{{ResortTitle}}{{/dashes}}_Beaches_2.jpg"></div>
+          <div class="resort-image"><img loading="lazy" src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Beaches/{{#dashes}}{{ResortTitle}}{{/dashes}}_Beaches_3.jpg"></div>
+          <div class="resort-image"><img loading="lazy" src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Beaches/{{#dashes}}{{ResortTitle}}{{/dashes}}_Beaches_4.jpg"></div>
         </div>
         <div class="resort-images pools">
-          <div class="resort-image"><img src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Pools/{{#dashes}}{{ResortTitle}}{{/dashes}}_Pools_1.jpg"></div>
-          <div class="resort-image"><img src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Pools/{{#dashes}}{{ResortTitle}}{{/dashes}}_Pools_2.jpg"></div>
-          <div class="resort-image"><img src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Pools/{{#dashes}}{{ResortTitle}}{{/dashes}}_Pools_3.jpg"></div>
-          <div class="resort-image"><img src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Pools/{{#dashes}}{{ResortTitle}}{{/dashes}}_Pools_4.jpg"></div>
+          <div class="resort-image"><img loading="lazy" src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Pools/{{#dashes}}{{ResortTitle}}{{/dashes}}_Pools_1.jpg"></div>
+          <div class="resort-image"><img loading="lazy" src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Pools/{{#dashes}}{{ResortTitle}}{{/dashes}}_Pools_2.jpg"></div>
+          <div class="resort-image"><img loading="lazy" src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Pools/{{#dashes}}{{ResortTitle}}{{/dashes}}_Pools_3.jpg"></div>
+          <div class="resort-image"><img loading="lazy" src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Pools/{{#dashes}}{{ResortTitle}}{{/dashes}}_Pools_4.jpg"></div>
         </div>
         <div class="resort-images dining">
-          <div class="resort-image"><img src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Dining-Bars/{{#dashes}}{{ResortTitle}}{{/dashes}}_Dining-Bars_1.jpg"></div>
-          <div class="resort-image"><img src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Dining-Bars/{{#dashes}}{{ResortTitle}}{{/dashes}}_Dining-Bars_2.jpg"></div>
-          <div class="resort-image"><img src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Dining-Bars/{{#dashes}}{{ResortTitle}}{{/dashes}}_Dining-Bars_3.jpg"></div>
-          <div class="resort-image"><img src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Dining-Bars/{{#dashes}}{{ResortTitle}}{{/dashes}}_Dining-Bars_4.jpg"></div>
+          <div class="resort-image"><img loading="lazy" src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Dining-Bars/{{#dashes}}{{ResortTitle}}{{/dashes}}_Dining-Bars_1.jpg"></div>
+          <div class="resort-image"><img loading="lazy" src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Dining-Bars/{{#dashes}}{{ResortTitle}}{{/dashes}}_Dining-Bars_2.jpg"></div>
+          <div class="resort-image"><img loading="lazy" src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Dining-Bars/{{#dashes}}{{ResortTitle}}{{/dashes}}_Dining-Bars_3.jpg"></div>
+          <div class="resort-image"><img loading="lazy" src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Dining-Bars/{{#dashes}}{{ResortTitle}}{{/dashes}}_Dining-Bars_4.jpg"></div>
         </div>
         <!-- <div class="resort-images watersports">
-          <div class="resort-image"><img src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Watersports/{{#dashes}}{{ResortTitle}}{{/dashes}}_Watersports_1.jpg"></div>
-          <div class="resort-image"><img src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Watersports/{{#dashes}}{{ResortTitle}}{{/dashes}}_Watersports_2.jpg"></div>
-          <div class="resort-image"><img src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Watersports/{{#dashes}}{{ResortTitle}}{{/dashes}}_Watersports_3.jpg"></div>
-          <div class="resort-image"><img src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Watersports/{{#dashes}}{{ResortTitle}}{{/dashes}}_Watersports_4.jpg"></div>
+          <div class="resort-image"><img loading="lazy" src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Watersports/{{#dashes}}{{ResortTitle}}{{/dashes}}_Watersports_1.jpg"></div>
+          <div class="resort-image"><img loading="lazy" src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Watersports/{{#dashes}}{{ResortTitle}}{{/dashes}}_Watersports_2.jpg"></div>
+          <div class="resort-image"><img loading="lazy" src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Watersports/{{#dashes}}{{ResortTitle}}{{/dashes}}_Watersports_3.jpg"></div>
+          <div class="resort-image"><img loading="lazy" src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Watersports/{{#dashes}}{{ResortTitle}}{{/dashes}}_Watersports_4.jpg"></div>
         </div>
         <div class="resort-images island">
-          <div class="resort-image"><img src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Tours/{{#dashes}}{{ResortTitle}}{{/dashes}}_Tours_1.jpg"></div>
-          <div class="resort-image"><img src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Tours/{{#dashes}}{{ResortTitle}}{{/dashes}}_Tours_2.jpg"></div>
-          <div class="resort-image"><img src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Tours/{{#dashes}}{{ResortTitle}}{{/dashes}}_Tours_3.jpg"></div>
-          <div class="resort-image"><img src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Tours/{{#dashes}}{{ResortTitle}}{{/dashes}}_Tours_4.jpg"></div>
+          <div class="resort-image"><img loading="lazy" src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Tours/{{#dashes}}{{ResortTitle}}{{/dashes}}_Tours_1.jpg"></div>
+          <div class="resort-image"><img loading="lazy" src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Tours/{{#dashes}}{{ResortTitle}}{{/dashes}}_Tours_2.jpg"></div>
+          <div class="resort-image"><img loading="lazy" src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Tours/{{#dashes}}{{ResortTitle}}{{/dashes}}_Tours_3.jpg"></div>
+          <div class="resort-image"><img loading="lazy" src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Tours/{{#dashes}}{{ResortTitle}}{{/dashes}}_Tours_4.jpg"></div>
         </div> -->
       </div>
     </div>
@@ -140,7 +140,7 @@
 
   <iframe class="map" src="https://my.atlist.com/map/d9913452-61e9-4be1-b129-4cf9dc6202a3/?share=true" allow="geolocation 'self' https://my.atlist.com"  margin-bottom="-5px" width="100%" height="750px" loading="lazy" frameborder="0" scrolling="no" allowfullscreen id="atlist-embed"></iframe>
 
-  <!-- <section class="map"><img src="images/Map.jpg" loading="lazy" sizes="100vw" srcset="images/Map-p-500.jpg 500w, images/Map-p-800.jpg 800w, images/Map-p-1080.jpg 1080w, images/Map-p-1600.jpg 1600w, images/Map-p-2000.jpg 2000w, images/Map.jpg 2585w" alt="" class="image-2"></section> -->
+  <!-- <section class="map"><img loading="lazy" src="images/Map.jpg" loading="lazy" sizes="100vw" srcset="images/Map-p-500.jpg 500w, images/Map-p-800.jpg 800w, images/Map-p-1080.jpg 1080w, images/Map-p-1600.jpg 1600w, images/Map-p-2000.jpg 2000w, images/Map.jpg 2585w" alt="" class="image-2"></section> -->
   <section id="filters" class="filters">
     <div class="filters-inner">
             <div class="filters-title">
@@ -148,15 +148,15 @@
       </div>
       
       <div class="carousel-island" data-flickity='{ "groupCells": true }'>
-        <div data-island="antigua" class="carousel-cell island-picker"><div  class="island-name">Antigua</div><img src="images/splash/antigua.webp"></div>
-        <div data-island="barbados" class="carousel-cell island-picker"><div class="island-name">Barbados</div><img src="images/splash/barbados.jpg"></div>
-        <div data-island="bahamas" class="carousel-cell island-picker"><div  class="island-name">Bahamas</div><img src="images/splash/bahamas.webp"></div>
-        <div data-island="curacao" class="carousel-cell island-picker"><div class="island-name">Curaçao</div><img src="images/splash/curacao.webp"></div>
-        <div data-island="grenada" class="carousel-cell island-picker"><div class="island-name">Grenada</div><img src="images/splash/grenada.jpeg"></div>
-        <div data-island="jamaica" class="carousel-cell island-picker"><div class="island-name">Jamaica</div><img src="images/splash/jamaica.webp"></div>
-        <div data-island="saint-lucia" class="carousel-cell island-picker"><div  class="island-name">Saint Lucia</div><img src="images/splash/saintlucia.webp"></div>
-        <div data-island="saint-vincent" class="carousel-cell island-picker"><div class="island-name">Saint Vincent</div><img src="images/splash/Vincent.jpg"></div>
-        <div data-island="turks-and-caicos" class="carousel-cell island-picker"><div class="island-name">Turks and Caicos</div><img src="images/splash/Turks.webp"></div>
+        <div data-island="antigua" class="carousel-cell island-picker"><div  class="island-name">Antigua</div><img loading="lazy" src="images/splash/antigua.webp"></div>
+        <div data-island="barbados" class="carousel-cell island-picker"><div class="island-name">Barbados</div><img loading="lazy" src="images/splash/barbados.jpg"></div>
+        <div data-island="bahamas" class="carousel-cell island-picker"><div  class="island-name">Bahamas</div><img loading="lazy" src="images/splash/bahamas.webp"></div>
+        <div data-island="curacao" class="carousel-cell island-picker"><div class="island-name">Curaçao</div><img loading="lazy" src="images/splash/curacao.webp"></div>
+        <div data-island="grenada" class="carousel-cell island-picker"><div class="island-name">Grenada</div><img loading="lazy" src="images/splash/grenada.jpeg"></div>
+        <div data-island="jamaica" class="carousel-cell island-picker"><div class="island-name">Jamaica</div><img loading="lazy" src="images/splash/jamaica.webp"></div>
+        <div data-island="saint-lucia" class="carousel-cell island-picker"><div  class="island-name">Saint Lucia</div><img loading="lazy" src="images/splash/saintlucia.webp"></div>
+        <div data-island="saint-vincent" class="carousel-cell island-picker"><div class="island-name">Saint Vincent</div><img loading="lazy" src="images/splash/Vincent.jpg"></div>
+        <div data-island="turks-and-caicos" class="carousel-cell island-picker"><div class="island-name">Turks and Caicos</div><img loading="lazy" src="images/splash/Turks.webp"></div>
       </div>
 
     </div>
