--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <div class="Sandals-Saint-Montego flex resort-wrapper">
       <div class="left-resort-details">
         <div class="resort-image">
-          <img src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Carousel_ResortHero_Slider/{{#dashes}}{{ResortTitle}}{{/dashes}}_Carousel_ResortHero_Slider_1.jpg">
+          <img src="Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Carousel_ResortHero_Slider/{{#dashes}}{{ResortTitle}}{{/dashes}}_Carousel_ResortHero_Slider_1.jpg">
         </div>
         <div class="resort-description">
           <h2>{{ResortTitle}}</h2>
@@ -95,42 +95,42 @@
           <div data-id="island" class="tab">Island Tours</div> -->
         </div>
         <div class="resort-images suggested active">
-          <div class="resort-image"><img src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Carousel_ResortHero_Slider/{{#dashes}}{{ResortTitle}}{{/dashes}}_Carousel_ResortHero_Slider_1.jpg"></div>
-          <div class="resort-image"><img src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Beaches/{{#dashes}}{{ResortTitle}}{{/dashes}}_Beaches_1.jpg"></div>
-          <div class="resort-image"><img src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Pools/{{#dashes}}{{ResortTitle}}{{/dashes}}_Pools_1.jpg"></div>
-          <div class="resort-image"><img src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Dining-Bars/{{#dashes}}{{ResortTitle}}{{/dashes}}_Dining-Bars_1.jpg"></div>
-          <!-- <div class="resort-image"><img src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Watersports/{{#dashes}}{{ResortTitle}}{{/dashes}}_Watersports_1.jpg"></div>
-          <div class="resort-image"><img src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Tours/{{#dashes}}{{ResortTitle}}{{/dashes}}_Tours_1.jpg"></div> -->
+          <div class="resort-image"><img src="Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Carousel_ResortHero_Slider/{{#dashes}}{{ResortTitle}}{{/dashes}}_Carousel_ResortHero_Slider_1.jpg"></div>
+          <div class="resort-image"><img src="Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Beaches/{{#dashes}}{{ResortTitle}}{{/dashes}}_Beaches_1.jpg"></div>
+          <div class="resort-image"><img src="Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Pools/{{#dashes}}{{ResortTitle}}{{/dashes}}_Pools_1.jpg"></div>
+          <div class="resort-image"><img src="Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Dining-Bars/{{#dashes}}{{ResortTitle}}{{/dashes}}_Dining-Bars_1.jpg"></div>
+          <!-- <div class="resort-image"><img src="Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Watersports/{{#dashes}}{{ResortTitle}}{{/dashes}}_Watersports_1.jpg"></div>
+          <div class="resort-image"><img src="Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Tours/{{#dashes}}{{ResortTitle}}{{/dashes}}_Tours_1.jpg"></div> -->
         </div>
         <div class="resort-images beaches">
-          <div class="resort-image"><img src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Beaches/{{#dashes}}{{ResortTitle}}{{/dashes}}_Beaches_1.jpg"></div>
-          <div class="resort-image"><img src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Beaches/{{#dashes}}{{ResortTitle}}{{/dashes}}_Beaches_2.jpg"></div>
-          <div class="resort-image"><img src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Beaches/{{#dashes}}{{ResortTitle}}{{/dashes}}_Beaches_3.jpg"></div>
-          <div class="resort-image"><img src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Beaches/{{#dashes}}{{ResortTitle}}{{/dashes}}_Beaches_4.jpg"></div>
+          <div class="resort-image"><img src="Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Beaches/{{#dashes}}{{ResortTitle}}{{/dashes}}_Beaches_1.jpg"></div>
+          <div class="resort-image"><img src="Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Beaches/{{#dashes}}{{ResortTitle}}{{/dashes}}_Beaches_2.jpg"></div>
+          <div class="resort-image"><img src="Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Beaches/{{#dashes}}{{ResortTitle}}{{/dashes}}_Beaches_3.jpg"></div>
+          <div class="resort-image"><img src="Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Beaches/{{#dashes}}{{ResortTitle}}{{/dashes}}_Beaches_4.jpg"></div>
         </div>
         <div class="resort-images pools">
-          <div class="resort-image"><img src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Pools/{{#dashes}}{{ResortTitle}}{{/dashes}}_Pools_1.jpg"></div>
-          <div class="resort-image"><img src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Pools/{{#dashes}}{{ResortTitle}}{{/dashes}}_Pools_2.jpg"></div>
-          <div class="resort-image"><img src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Pools/{{#dashes}}{{ResortTitle}}{{/dashes}}_Pools_3.jpg"></div>
-          <div class="resort-image"><img src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Pools/{{#dashes}}{{ResortTitle}}{{/dashes}}_Pools_4.jpg"></div>
+          <div class="resort-image"><img src="Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Pools/{{#dashes}}{{ResortTitle}}{{/dashes}}_Pools_1.jpg"></div>
+          <div class="resort-image"><img src="Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Pools/{{#dashes}}{{ResortTitle}}{{/dashes}}_Pools_2.jpg"></div>
+          <div class="resort-image"><img src="Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Pools/{{#dashes}}{{ResortTitle}}{{/dashes}}_Pools_3.jpg"></div>
+          <div class="resort-image"><img src="Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Pools/{{#dashes}}{{ResortTitle}}{{/dashes}}_Pools_4.jpg"></div>
         </div>
         <div class="resort-images dining">
-          <div class="resort-image"><img src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Dining-Bars/{{#dashes}}{{ResortTitle}}{{/dashes}}_Dining-Bars_1.jpg"></div>
-          <div class="resort-image"><img src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Dining-Bars/{{#dashes}}{{ResortTitle}}{{/dashes}}_Dining-Bars_2.jpg"></div>
-          <div class="resort-image"><img src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Dining-Bars/{{#dashes}}{{ResortTitle}}{{/dashes}}_Dining-Bars_3.jpg"></div>
-          <div class="resort-image"><img src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Dining-Bars/{{#dashes}}{{ResortTitle}}{{/dashes}}_Dining-Bars_4.jpg"></div>
+          <div class="resort-image"><img src="Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Dining-Bars/{{#dashes}}{{ResortTitle}}{{/dashes}}_Dining-Bars_1.jpg"></div>
+          <div class="resort-image"><img src="Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Dining-Bars/{{#dashes}}{{ResortTitle}}{{/dashes}}_Dining-Bars_2.jpg"></div>
+          <div class="resort-image"><img src="Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Dining-Bars/{{#dashes}}{{ResortTitle}}{{/dashes}}_Dining-Bars_3.jpg"></div>
+          <div class="resort-image"><img src="Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Dining-Bars/{{#dashes}}{{ResortTitle}}{{/dashes}}_Dining-Bars_4.jpg"></div>
         </div>
         <!-- <div class="resort-images watersports">
-          <div class="resort-image"><img src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Watersports/{{#dashes}}{{ResortTitle}}{{/dashes}}_Watersports_1.jpg"></div>
-          <div class="resort-image"><img src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Watersports/{{#dashes}}{{ResortTitle}}{{/dashes}}_Watersports_2.jpg"></div>
-          <div class="resort-image"><img src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Watersports/{{#dashes}}{{ResortTitle}}{{/dashes}}_Watersports_3.jpg"></div>
-          <div class="resort-image"><img src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Watersports/{{#dashes}}{{ResortTitle}}{{/dashes}}_Watersports_4.jpg"></div>
+          <div class="resort-image"><img src="Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Watersports/{{#dashes}}{{ResortTitle}}{{/dashes}}_Watersports_1.jpg"></div>
+          <div class="resort-image"><img src="Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Watersports/{{#dashes}}{{ResortTitle}}{{/dashes}}_Watersports_2.jpg"></div>
+          <div class="resort-image"><img src="Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Watersports/{{#dashes}}{{ResortTitle}}{{/dashes}}_Watersports_3.jpg"></div>
+          <div class="resort-image"><img src="Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Watersports/{{#dashes}}{{ResortTitle}}{{/dashes}}_Watersports_4.jpg"></div>
         </div>
         <div class="resort-images island">
-          <div class="resort-image"><img src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Tours/{{#dashes}}{{ResortTitle}}{{/dashes}}_Tours_1.jpg"></div>
-          <div class="resort-image"><img src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Tours/{{#dashes}}{{ResortTitle}}{{/dashes}}_Tours_2.jpg"></div>
-          <div class="resort-image"><img src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Tours/{{#dashes}}{{ResortTitle}}{{/dashes}}_Tours_3.jpg"></div>
-          <div class="resort-image"><img src="/Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Tours/{{#dashes}}{{ResortTitle}}{{/dashes}}_Tours_4.jpg"></div>
+          <div class="resort-image"><img src="Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Tours/{{#dashes}}{{ResortTitle}}{{/dashes}}_Tours_1.jpg"></div>
+          <div class="resort-image"><img src="Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Tours/{{#dashes}}{{ResortTitle}}{{/dashes}}_Tours_2.jpg"></div>
+          <div class="resort-image"><img src="Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Tours/{{#dashes}}{{ResortTitle}}{{/dashes}}_Tours_3.jpg"></div>
+          <div class="resort-image"><img src="Sandals_Images/{{#dashes}}{{ResortTitle}}{{/dashes}}/Tours/{{#dashes}}{{ResortTitle}}{{/dashes}}_Tours_4.jpg"></div>
         </div> -->
       </div>
     </div>
