--- a/index.html
+++ b/index.html
@@ -45,6 +45,11 @@
 <div class="gallery js-flickity" data-flickity-options='{ "wrapAround": true }'>
 
 </div>
+<div class="no-results">
+    <div class="no-results-message">
+      <h2>Oops, we couldn't find a resort like this, <span class="refine">refine your search</span> and try again</h2>
+    </div>
+</div>
 <div class="resorts-list"></div>
 <script id="entry-template" type="text/x-handlebars-template">
 {{#each this}}
@@ -163,7 +168,7 @@
       <div class="filters-title">
         <div class="filters-title-wrapper">
           <h1 class="heading-2">Build Your IDEAL VACATION</h1>
-          <h4 class="heading-3">Choose a family category + 1 other tag</h4>
+          <h4 class="heading-3">Select Your Guest Profile and any ONE Priority Activity</h4>
           <div class="tag-breadcrumb">
 
           </div>
