--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
     "IdealFor": "Pool Lovers",
     "IdealFor2": "Beach Lovers",
     "IdealFor3": "Food and Drink Lovers",
-    "Tags": "adults-only, more-social, more-intimate, long-stretch, scuba-on-property, motorized-watersports, tennis, swim-up-suites, jerk-shack, british-pub,  steakhouse, sushi, distance-to-airport-less-than-45-minutes \n",
+    "Tags": "adults-only, more-intimate, long-stretch, scuba-on-property, motorized-watersports, tennis, swim-up-suites, jerk-shack, british-pub,  steakhouse, sushi, distance-to-airport-less-than-45-minutes \n",
     "Images": "images/Sandals Montego Bay/1 - Carousel_ResortHero_Slider/Sandals-SMB-BeachAerial-6.jpg",
     "Beaches": "images/Sandals Montego Bay/1 - Carousel_ResortHero_Slider/Sandals-SMB-BeachAerial-6.jpg",
     "Pool": "images/Sandals Montego Bay/3 - Pools/Sandals-SMB-Swim-Up.jpg",
@@ -343,7 +343,7 @@
     "IdealFor": "Food and Drink Lovers",
     "IdealFor2": "Adventure",
     "IdealFor3": "Water Sports Lovers",
-    "Tags": "adults-only, more-tranquil, more-intimate, offshore-island, scuba-on-property, over-the-water-villas, jerk-shack, british-pub, distance-to-airport-less-than-45-minutes \n",
+    "Tags": "adults-only, more-intimate, offshore-island, scuba-on-property, over-the-water-villas, jerk-shack, british-pub, distance-to-airport-less-than-45-minutes \n",
     "Images": "images/Sandals Royal Caribbean/1 - Carousel_ResortHero_Slider/Sandals-Royal-Caribbean-Offshore-Island.jpg",
     "Beaches": "images/Sandals Royal Caribbean/4 - Beaches/Sandals-SRC-BeachAerial-7.jpg",
     "Pool": "images/Sandals Royal Caribbean/3 - Pools/Sandals-Royal-Caribbean-Swim-ups.jpg",
@@ -359,7 +359,7 @@
     "IdealFor": "Beach Lovers",
     "IdealFor2": "Adventure Lovers",
     "IdealFor3": "Watersports Lovers",
-    "Tags": "adults-only, more-tranquil, more-intimate, long-stretch, scuba-on-property, glass-bottom-boat, tennis, sky-pool-suite, swim-up-suite, motorized-watersports, teppanyaki, distance-to-airport-more-than-an-hour  \n",
+    "Tags": "adults-only, more-intimate, long-stretch, scuba-on-property, glass-bottom-boat, tennis, sky-pool-suite, swim-up-suite, motorized-watersports, teppanyaki, distance-to-airport-more-than-an-hour  \n",
     "Images": "images/Sandals Negril/1 - Carousel_ResortHero_Slider/Sandals-Negril-Aerial.jpg",
     "Beaches": "images/Sandals Negril/4 - Beaches/Sandals-Negril-Aerial.jpg",
     "Pool": "images/Sandals Negril/3 - Pools/Sandals-Negril-Pool.jpg",
@@ -375,7 +375,7 @@
     "IdealFor": "Golf Lovers",
     "IdealFor2": "Food and Drink Lovers",
     "IdealFor3": "Pool Lovers",
-    "Tags": "adults-only, more-social, more-expansive, scuba-on-property, golf, glass-bottom-boat, tennis, pickle-ball, jerk-shack, sushi, teppanyaki, distance-to-airport-more-than-an-hour  \n",
+    "Tags": "adults-only, more-expansive, scuba-on-property, golf, glass-bottom-boat, tennis, pickle-ball, jerk-shack, sushi, teppanyaki, distance-to-airport-more-than-an-hour  \n",
     "Images": "images/Sandals Ochi/1 - Carousel_ResortHero_Slider/Sandals-Ochi-Main-Pool.jpg",
     "Beaches": "images/Sandals Ochi/4 - Beaches/Sandals-Ochi-Beach.jpg",
     "Pool": "images/Sandals Ochi/3 - Pools/Sandals-Ochi-Great-House-Village.jpg",
@@ -391,7 +391,7 @@
     "IdealFor": "Beach Lovers",
     "IdealFor2": "Food and Drink Lovers",
     "IdealFor3": "Golf Lovers",
-    "Tags": "adults-only, more-tranquil, more-intimate, scuba-on-property, cove-beach, glass-bottom-boat, golf, tennis, british-pub, distance-to-airport-more-than-an-hour  \n",
+    "Tags": "adults-only, more-intimate, cove-beach, glass-bottom-boat, golf, tennis, british-pub, distance-to-airport-more-than-an-hour  \n",
     "Images": "images/Sandals Royal Plantation/1 - Carousel_ResortHero_Slider/croissantsandcaviar_sandalsroyalplantation-15.jpg",
     "Beaches": "",
     "Pool": "",
@@ -440,7 +440,7 @@
     "IdealFor": "Food and Drink Lovers",
     "IdealFor2": "Island Lovers",
     "IdealFor3": "Pool Lovers",
-    "Tags": "adults-only, more-social, more-intimate, scuba-on-property, long-stretch, tennis, pickle-ball, british-pub, jerk-shack, sushi, teppanyaki, distance-to-airport-less-than-45-minutes \n",
+    "Tags": "adults-only, more-social, more-intimate, offshore-island, scuba-on-property, tennis, british-pub, sushi, teppanyaki, distance-to-airport-less-than-45-minutes \n",
     "Images": "images/Sandals Royal Bahamian/1 - Carousel_ResortHero_Slider/SRB - Aerial Beach 1.jpg",
     "Beaches": "images/Sandals Royal Bahamian/4 - Beaches/SRB - Aerial Barefoot Cay 2.jpg",
     "Pool": "images/Sandals Royal Bahamian/3 - Pools/SRB - Aerial East Bay Pool 2.jpg",
@@ -456,7 +456,7 @@
     "IdealFor": "Dive Lover",
     "IdealFor2": "Adventure Lovers",
     "IdealFor3": "Nature Lovers",
-    "Tags": "adults-only, more-social, more-expansive, scuba-on-property, tennis, swim-up-suite, tennis, british-pub, sushi, teppanyaki, distance-to-airport-less-than-45-minutes \n",
+    "Tags": "adults-only, more-expansive, scuba-on-property, swim-up-suite, tennis, british-pub, sushi, teppanyaki, steakhouse, distance-to-airport-less-than-45-minutes \n",
     "Images": "images/Sandals Grenada/1 - Carousel_ResortHero_Slider/GRENEDA_SANDALS_DISKIN-161.jpg",
     "Beaches": "images/Sandals Grenada/4 - Beaches/Sandals-Grenada-02-2022-Beaches 2-5156.jpg",
     "Pool": "images/Sandals Grenada/3 - Pools/GRENEDA_SANDALS_DISKIN-161.1.jpg",
@@ -472,7 +472,7 @@
     "IdealFor": "Beach Lovers",
     "IdealFor2": "Pool Lovers",
     "IdealFor3": "Food and Drink Lovers",
-    "Tags": "adults-only, more-social, more-expansive, scuba-on-property, swim-up-suite, tennis, glass-bottom-boat, bowling, teppanyaki, sushi, steakhouse, british-pub , distance-to-airport-less-than-45-minutes \n",
+    "Tags": "adults-only, more-expansive, swim-up-suite, tennis, glass-bottom-boat, jerk-shack, bowling, teppanyaki, sushi, steakhouse, british-pub , distance-to-airport-less-than-45-minutes \n",
     "Images": "images/Sandals Barbados/1 - Carousel_ResortHero_Slider/IMG_9234.jpg",
     "Beaches": "images/Sandals Barbados/5 - Dining & Bars/SBR_TIKI_BEACH_BAR_0290.jpg",
     "Pool": "",
@@ -488,7 +488,7 @@
     "IdealFor": "Pool Lovers",
     "IdealFor2": "Food and Drink Lovers",
     "IdealFor3": "Dive Lovers",
-    "Tags": "adults-only, more-social, more-expansive, scuba-on-property, swim-up-suite, skypool-suite, rondovol-villa, tennis, bowling, steakhouse, jerk shack, distance-to-airport-less-than-45-minutes \n",
+    "Tags": "adults-only, more-expansive, swim-up-suite, skypool-suite, rondovol-villa, tennis, bowling, steakhouse, jerk shack, distance-to-airport-less-than-45-minutes \n",
     "Images": "images/Sandals Royal Barbados/1 - Carousel_ResortHero_Slider/SBR_SAINT_LAWRENCE_HOUSE_EXT_MAGIC_072.jpg",
     "Beaches": "images/Sandals Royal Barbados/4 - Beaches/SBR_MAIN_POOL_DRONE_0113.jpg",
     "Pool": "images/Sandals Royal Barbados/3 - Pools/SBR_MAIN_POOL_DRONE_0053.jpg",
@@ -504,7 +504,7 @@
     "IdealFor": "Pool Lovers",
     "IdealFor2": "Golf Lovers",
     "IdealFor3": "Water Sports Lovers",
-    "Tags": "adults-only, more-tranquil, more-intimate, scuba-on-property, golf, tennis, motorized-watersports, swim-up-suite, rondovol-villa, teppanyaki, sushi, distance-to-airport-more-than-an-hour \n",
+    "Tags": "adults-only, more-intimate, golf, tennis, motorized-watersports, swim-up-suite, rondovol-villa, teppanyaki, sushi, distance-to-airport-more-than-an-hour \n",
     "Images": "images/Sandals Halcyon Beach/1 - Carousel_ResortHero_Slider/SHC Drone.jpg",
     "Beaches": "images/Sandals Halcyon Beach/4 - Beaches/SHC Drone.jpg",
     "Pool": "",
@@ -520,7 +520,7 @@
     "IdealFor": "Beach Lovers\n",
     "IdealFor2": "Nature Lovers",
     "IdealFor3": "Golf Lovers",
-    "Tags": "adults-only, golf, more-tranquil, more-expansive, scuba-on-property, swim-up-suite, rondoval-villa, steakhouse, sushi,",
+    "Tags": "adults-only, golf, more-tranquil, teppanyaki, british-pub, long-stretch, more-expansive, swim-up-suite, rondoval-villa, sushi,",
     "Images": "images/Sandals Regency La Toc/1 - Carousel_ResortHero_Slider/SLU Drone 3.jpg",
     "Beaches": "images/Sandals Regency La Toc/4 - Beaches/SLU Drone 4-2.jpg",
     "Pool": "images/Sandals Regency La Toc/3 - Pools/SLU Drone 1.jpg",
@@ -568,7 +568,7 @@
     "IdealFor": "Nature Lovers",
     "IdealFor2": "Pool Lovers",
     "IdealFor3": "Watersports Lovers",
-    "Tags": "adults-only, more-tranquil, more-intimate, long-stretch-of-beach, scuba-on-property,, tennis, rondoval-villa, teppanyaki, british-pub, sushi",
+    "Tags": "adults-only, more-tranquil, more-intimate, scuba-on-property, tennis, rondoval-villa, teppanyaki, british-pub, sushi",
     "Images": "images/Sandals Grande Antigua/1 - Carousel_ResortHero_Slider/SANDALS_07_2019_BEACH_PADDLEBOARD_COUPLE_6830-370-123.jpg",
     "Beaches": "images/Sandals Grande Antigua/4 - Beaches",
     "Pool": "images/Sandals Grande Antigua/3 - Pools/7H6A7577.jpg",
@@ -584,7 +584,7 @@
     "IdealFor": "",
     "IdealFor2": "Dive Lovers",
     "IdealFor3": "Sport Lovers",
-    "Tags": "adults-only, more-tranquil, more-expansive, scuba-on-property, tennis, overwater villas, swim-up-suites, steakhouse, Sushi, Jerk Shack, distance-to-airport-less-than-45-minutes\n",
+    "Tags": "adults-only, more-tranquil, more-expansive, cove-beach, scuba-on-property, tennis, overwater-villas, swim-up-suites, steakhouse, sushi, jerk-shack, distance-to-airport-less-than-45-minutes\n",
     "Images": "images/Sandals Saint Vincent/1 - Carousel_ResortHero_Slider/Sandals-Saint-Vincent-aerial-beach.jpg",
     "Beaches": "images/Sandals Saint Vincent/4 - Beaches/Sandals-Saint-Vincent-beach.jpg",
     "Pool": "images/Sandals Saint Vincent/3 - Pools/Sandals-Saint-Vincent-Heart-Shape-Pool.jpg",
@@ -600,7 +600,7 @@
     "IdealFor": "Family Fun. ",
     "IdealFor2": "Watersports",
     "IdealFor3": "Golf Lovers",
-    "Tags": "families-with-kids, more-social, more-expansive, scuba-on-property, tennis, golf, distance-to-airport-more-than-an-hour \n",
+    "Tags": "families-with-kids, more-social, more-expansive, scuba-on-property, motorized-watersports, tennis, golf, cove-beach, distance-to-airport-more-than-an-hour \n",
     "Images": "images/Beaches Ocho Rios/1 - Carousel_ResortHero_Slider/BBO_Beach.jpg",
     "Beaches": "images/Beaches Ocho Rios/4 - Beaches/BBO_Beach_2_Drone_.jpg",
     "Pool": "images/Beaches Ocho Rios/3 - Pools/BBO_Pool_Bar.jpg",
@@ -616,7 +616,7 @@
     "IdealFor": "Family Fun",
     "IdealFor2": "Watersports",
     "IdealFor3": "Beach Lover",
-    "Tags": "families-with-kids, more-social, more-expansive, long-stretch, scuba-on-property, tennis, distance-to-airport-more-than-an-hour \n",
+    "Tags": "families-with-kids, more-social, more-expansive, motorized-watersports, teppanyaki, sushi, long-stretch, scuba-on-property, tennis, distance-to-airport-more-than-an-hour \n",
     "Images": "images/Beaches Negril/1 - Carousel_ResortHero_Slider/DJI_0935 copy.jpg",
     "Beaches": "images/Beaches Negril/4 - Beaches/Beaches Negril_Beach_4.jpg",
     "Pool": "images/Beaches Negril/3 - Pools/DJI_0820.jpg",
@@ -632,7 +632,7 @@
     "IdealFor": "Family Fun",
     "IdealFor2": "Watersports",
     "IdealFor3": "Dive Lovers",
-    "Tags": "families-with-kids, more-social, more-expansive, scuba-on-property, tennis, teppanyaki, sushi, british-pub, distance-to-airport: less-than-45-minutes\n",
+    "Tags": "families-with-kids, more-social, cove-beach, more-expansive, motorized-watersports, scuba-on-property, tennis, teppanyaki, sushi, british-pub, distance-to-airport: less-than-45-minutes\n",
     "Images": "images/Beaches Turks and Caicos/1 - Carousel_ResortHero_Slider/DJI_20240120093216_0798_D-Edit.1.jpg",
     "Beaches": "images/Beaches Turks and Caicos/4 - Beaches/DJI_20240120093216_0798_D-Edit.jpg",
     "Pool": "images/Beaches Turks and Caicos/3 - Pools/BTC_ITALIAN_POOL20-6-963-Edit.jpg",
